objects/dsfs__Recipient__c.object
<CustomObject>
    <fields>
        <fullName>dsfs__AccessCode__c</fullName>
        <label>AccessCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Action__c</fullName>
        <label>Action</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__Email__c</fullName>
        <label>Email</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EnvelopeConfiguration__c</fullName>
        <label>DocuSign Envelope Configuration</label>
        <referenceTo>dsfs__EnvelopeConfiguration__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dsfs__FirstName__c</fullName>
        <label>First Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__LastName__c</fullName>
        <label>LastName</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Message__c</fullName>
        <label>Private Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dsfs__Object__c</fullName>
        <label>Object</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Order__c</fullName>
        <label>Routing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>dsfs__PrivateMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__Role__c</fullName>
        <label>Role</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__SigningGroupId__c</fullName>
        <label>Signing Group ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__SigningGroupName__c</fullName>
        <label>Signing Group Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRL</fullName>
                </value>
                <value>
                    <fullName>CRCL</fullName>
                </value>
                <value>
                    <fullName>CRL Signing Group</fullName>
                </value>
                <value>
                    <fullName>CRCL Signing Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Contact</label>
    <nameField>
        <displayFormat>CBR-{000000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>